2017-05-30      Gaius Mulley <gaius@gnu.org>

	* patches/gcc/trunc/01-patches:  (New file).
	* patches/gcc/trunc/02-patches:  (New file).
	* patches/gcc/trunc/03-patches:  (New file).
	* patches/gcc/trunc/04-patches:  (New file).
	* patches/gcc/trunc/05-patches:  (New file).
	* patches/gcc/trunc/06-patches:  (New file).
	* patches/gcc/trunc/07-patches:  (New file).
	* patches/gcc/trunc/08-patches:  (New file).
	* patches/gcc/trunc/09-patches:  (New file).
	* patches/gcc/trunc/10-patches:  (New file).
	* patches/gcc/trunc/11-patches:  (New file).
	* gm2/tools-src/gensum.py:  tidied up spacing and changed Usage
          to take an exit code.
	* gm2/gm2-lang.c:  call build_common_tree_nodes with a single
          parameter.  Use late_global_decl callback instead of global_decl.
	* gm2-gcc/m2type.c:  use SET_TYPE_ALIGN instead of an assignment.
	* gm2/gm2-gcc/gcc-consolidation.h:  include backend.h,
          rtl.h, predict.h and df.h.
	* gm2/tools-src/gensum.py:  changed CVS url to the git url.
          Generate a summary at the top of the passes, failures and
	  unresolved tests.

2017-05-24      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GCCDeclare.mod:  use separate procedure to
          declare variables depending whether -fm2-whole-program was
          specified.  (DeclareImportedVariablesWholeProgram)  New
          procedure.  (DeclareVariableWholeProgram)  New procedure.
          (DeclareGlobalVariablesWholeProgram)  New procedure.
          (DeclareImportedVariablesWholeProgram)  New procedure.
          (StartDeclareModuleScopeWholeProgram)  use
	  DeclareImportedVariablesWholeProgram.
	* gm2/gm2-gcc/m2decl.c:  corrected dates.

2017-05-23      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Code.mod:  removed unnecessary code.
          No longer need M2SubExp.mod.
	* gm2/gm2-compiler/M2GCCDeclare.mod:  (IsRecordFieldDependants)
          check alignment value.  (WalkRecordFieldDependants)